syntax = "proto3";

package shop;

option java_multiple_files = true;
option java_package = "com.shop";
option java_outer_classname = "ProductProto";


service ProductService{
  rpc takeProduct (ProductRequest) returns (ProductResponse) {}
  rpc takeProductList (ProductListRequest) returns (stream ProductResponse){}

  rpc takeCategories (CategoryRequest) returns (stream CategoryResponse){}

  rpc takeClientList(ClientListRequest) returns (stream ClientResponse){}

  rpc saveCategory(SaveCategoryRequest) returns (SaveResponse){}
  rpc saveProduct(SaveProductRequest) returns (SaveResponse){}
  rpc saveClient(SaveClientRequest) returns (SaveResponse){}
}


message ProductRequest {
  string url=1;
}

message ProductResponse {
  bytes product = 1;
}

message ProductListRequest {
  string url=1;
}

message CategoryRequest {
}

message CategoryResponse {
  bytes category=1;
}

message SaveResponse {
}

message SaveCategoryRequest {
  bytes category=1;
}

message SaveProductRequest {
  bytes product = 1;
}

message SaveClientRequest {
  bytes client = 1;
}

message ClientListRequest {
}

message ClientResponse {
  bytes client=1;
}